--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
-- 👋 Hi, I’m @xYUSF
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>موقع لعبة حياة واقعية</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
 
-<!---
-xYUSF/xYUSF is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        nav {
+            background-color: #555;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            background-color: #888;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>موقع لعبة حياة واقعية</h1>
+    </header>
+
+    <nav>
+        <a href="#">الصفحة الرئيسية</a>
+        <a href="#">كيفية اللعب</a>
+        <a href="#">المزيد من المعلومات</a>
+        <a href="#">اتصل بنا</a>
+    </nav>
+
+    <main>
+        <h2>مرحبًا بك في لعبة حياة واقعية</h2>
+        <p>استمتع بتجربة فريدة من نوعها مع لعبة حياة واقعية. اكتشف عالمًا افتراضيًا مليئًا بالمغامرات والتحديات.</p>
+    </main>
+
+    <footer>
+        &copy; 2023 موقع لعبة حياة واقعية
+    </footer>
+
+</body>
+</html>
